# plotly-lite

./: .gitignore  CITATION.cff  README.md  demo.ipynb  pyproject.toml  rendering.ipynb  requirements.txt  setup.py
plotly_lite/: plotting.py
