[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "plotly-lite"          # must be unique on PyPI
version = "0.1.0"
description = "lite version wrapper on plotly for quick utilization for scientific graphs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["plotly>=5.19.0"]            # add any runtime deps here

[project.urls]
Homepage = "https://github.com/Shahrukh-Chishti/plotly-lite"